# tokenfreq-c99

./: .clang-tidy  .gitattributes  .gitignore  .gitleaks.toml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  c-build.sh  c-quality.sh  test.txt  wc_fault_alloc.c  wc_fault_alloc.h  wc_fuzz_diff.c  wc_main.c  wc_test.c  wc_test_collision.c  wc_test_fault.c  wordcount.c  wordcount.h
.config/mise/: config.toml
.config/mise/conf.d/: 20-c.toml
.github/workflows/: ci.yml
benchmark/: bench.sh
cmake/: wordcount.pc.in  wordcountConfig.cmake.in
docs/: cli.md  guide.md  spec.md
tests/: cli_behavior.cmake  cli_output_errors.cmake  compile_cpp.cpp  compile_invalid_config.cmake  compile_msvc_sal.c  compile_static_init.c  counter_overflow.c  full_table_tiny.c  no_libc_symbols.cmake  noheap_static.c  noheap_tiny_autotune.c  pkgconfig_relocatable.cmake  ptrdiff_caps.c
